--- a/Crm.Website/Views/Home/Index.cshtml
+++ b/Crm.Website/Views/Home/Index.cshtml
@@ -1,8 +1,54 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model IEnumerable<Student>
+
+@{
+    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h2>Index</h2>
+
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Email)
+        </th>
+        <th></th>
+    </tr>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.MiddeName)
+            </td>
+            <td>
+                @Html.DisplayFor(modeItel => item.Email);
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.BirthDate);
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PhoneNumber);
+            </td>
+          
+
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Name }) |
+                @Html.ActionLink("Details", "Details", new { id = item.MiddeName  }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.LastName })
+            </td>
+        </tr>
+    }
+
+</table>
