--- a/Crm.Website/Views/Home/Edit.cshtml
+++ b/Crm.Website/Views/Home/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Student
+﻿@model Crm.Website.Models.Student
 @{
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -65,13 +65,17 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
+            <form asp-action="Edit">
+                <input type="hidden" asp-for="Id" />
+                <input type="submit" value="Confirm" class="btn btn-danger float-right" />
+            </form>
+            <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
         </div>
+
+       @*  <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Save" formmethod="post" class="btn btn-default" />
+            </div> *@
+     
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
