--- a/Crm.Website/Views/Home/Index.cshtml
+++ b/Crm.Website/Views/Home/Index.cshtml
@@ -1,28 +1,38 @@
-﻿@model IEnumerable<Student>
+﻿@model IEnumerable<Crm.Website.Models.Student>
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<h2> <strong>All Students list</strong> </h2>
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
+
+    @Html.ActionLink("Create","Create")
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Email)
+            @Html.DisplayNameFor(model => model.LastName)
         </th>
-        <th></th>
+        <th>
+            @Html.DisplayNameFor(model => model.MiddeName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Email);
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.BirthDate);
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.PhoneNumber);
+        </th>
     </tr>
+
     @foreach (var item in Model)
     {
         <tr>
+
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
@@ -41,12 +51,12 @@
             <td>
                 @Html.DisplayFor(modelItem => item.PhoneNumber);
             </td>
-          
 
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Name }) |
-                @Html.ActionLink("Details", "Details", new { id = item.MiddeName  }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.LastName })
+              
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id})
+                @Html.ActionLink("Details", "Details", new { id = item.Id  }) 
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
             </td>
         </tr>
     }
