--- a/Crm.Website/Views/Home/Delete.cshtml
+++ b/Crm.Website/Views/Home/Delete.cshtml
@@ -35,9 +35,9 @@
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="MiddeName" class="control-label"></label>
-                    <input asp-for="MiddeName" class="form-control" readonly />
-                    <span asp-validation-for="MiddeName" class="text-danger"></span>
+                    <label asp-for="MiddleName" class="control-label"></label>
+                    <input asp-for="MiddleName" class="form-control" readonly />
+                    <span asp-validation-for="MiddleName" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
