--- a/Crm.Website/Views/Home/Index.cshtml
+++ b/Crm.Website/Views/Home/Index.cshtml
@@ -2,11 +2,14 @@
 
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+   
 }
 <h2> <strong>All Students list</strong> </h2>
 
 <table class="table">
 
+   
     @Html.ActionLink("Create","Create")
     <tr>
         <th>
@@ -16,7 +19,7 @@
             @Html.DisplayNameFor(model => model.LastName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.MiddeName)
+            @Html.DisplayNameFor(model => model.MiddleName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Email);
@@ -40,7 +43,7 @@
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.MiddeName)
+                @Html.DisplayFor(modelItem => item.MiddleName)
             </td>
             <td>
                 @Html.DisplayFor(modeItel => item.Email);
@@ -52,13 +55,13 @@
                 @Html.DisplayFor(modelItem => item.PhoneNumber);
             </td>
 
-            <td>
-              
+            <td>    
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id})
                 @Html.ActionLink("Details", "Details", new { id = item.Id  }) 
                 @Html.ActionLink("Delete", "Delete", new { id = item.Id })
             </td>
         </tr>
+      
     }
 
 </table>
